# eventmail

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  mail.rs  main.rs  prepmail.rs
